--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -163,7 +163,7 @@ jobs:
         run: npm install -g @railway/cli
 
       - name: Deploy to Railway
-        run: railway up --service idea2ad-api
+        run: railway up --service idea2ad
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
 
