--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -142,21 +142,8 @@ jobs:
           cache-to: type=gha,mode=max
 
   # Deploy backend to Railway Staging
-  deploy-staging:
-    runs-on: ubuntu-latest
-    needs: [docker-build]
-    if: github.ref == 'refs/heads/staging'
-    environment: staging
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install Railway CLI
-        run: npm install -g @railway/cli
-
-      - name: Deploy to Railway Staging
-        run: railway up --service idea2ad-staging --environment staging
-        env:
-          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN_STAGING }}
+  # Railway auto-deploys from the staging branch via deployment trigger — no manual step needed
+  # deploy-staging: (removed; Railway handles this via git push trigger)
 
   # Deploy backend to Railway Production
   deploy-backend:
